--- a/project_1/index.html
+++ b/project_1/index.html
@@ -20,7 +20,7 @@
                     <li class="header-content__item">Associate the page with the payment system</li>
                 </ul>
             </div>
-            <img src="#" alt="" width="469" height="214" class="header-content__img img">
+            <img src="#" alt="#" width="469" height="214" class="header-content__img img">
         </div>
     </header>
     <main class="main-content">
@@ -35,8 +35,7 @@
                         ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi
                         itaque, unde per&shy;ferendis nemo debitis dolor.</p>
                 </div>
-<<<<<<< Updated upstream
-                <img src="#" alt="" width="430" height="245" class="about-content__video img">
+                <video src="#" alt="#" width="430" height="245" class="about-content__video img">
             </div>
         </section>
         <section class="pluses-product padding-site">
@@ -120,9 +119,6 @@
                             veniam incidunt in quam sapiente ut ipsum.</p>
                     </figcaption>
                 </figure>
-=======
-                <img src="#" alt="#" width="469" height="214" class="header-content__img">
->>>>>>> Stashed changes
             </div>
         </section>
         <section class="reviews padding-site">
