Выполнена работа над ошибками Project_1

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -35,7 +35,7 @@
                         ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi
                         itaque, unde per&shy;ferendis nemo debitis dolor.</p>
                 </div>
-                <video src="#" alt="#" width="430" height="245" class="about-content__video img">
+                <video src="#" width="430" height="245" class="about-content__video img"></video>
             </div>
         </section>
         <section class="pluses-product padding-site">
@@ -125,47 +125,39 @@
             <span class="reviews__title title">Reviews</span>
             <div class="grid">
                 <article class="comment">
-                    <img src="#" alt="#" class="comment__img img">
+                    <img src="#" alt="#" height="75" class="comment__img img">
                     <div class="comment-text">
                         <p class="comment-text__description">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit.
                             Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                        <span class="comment-text__user">
-                            <address>Lourens S.</address>
-                        </span>
+                        <address class="comment-text__user">Lourens S.</address>
                     </div>
                 </article>
                 <article class="comment">
-                    <img src="#" alt="#" class="comment__img img">
+                    <img src="#" alt="#" height="75" class="comment__img img">
                     <div class="comment-text">
                         <p class="comment-text__description">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit.
                             Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                        <span class="comment-text__user">
-                            <address>Lourens S.</address>
-                        </span>
+                        <address class="comment-text__user">Lourens S.</address>
                     </div>
                 </article>
                 <article class="comment">
-                    <img src="#" alt="#" class="comment__img img">
+                    <img src="#" alt="#" height="75" class="comment__img img">
                     <div class="comment-text">
                         <p class="comment-text__description">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit.
                             Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                        <span class="comment-text__user">
-                            <address>Lourens S.</address>
-                        </span>
+                        <address class="comment-text__user">Lourens S.</address>
                     </div>
                 </article>
                 <article class="comment">
-                    <img src="#" alt="#" class="comment__img img">
+                    <img src="#" alt="#" height="75" class="comment__img img">
                     <div class="comment-text">
                         <p class="comment-text__description">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit.
                             Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                        <span class="comment-text__user">
-                            <address>Lourens S.</address>
-                        </span>
+                        <address class="comment-text__user">Lourens S.</address>
                     </div>
                 </article>
             </div>
@@ -182,7 +174,9 @@
                         <li class="buy-row-item__list-item">Cum odio, iste quia doloribus autem;</li>
                         <li class="buy-row-item__list-item">Aperiam nulla ea neque.</li>
                     </ol>
-                    <a href="" class="buy-row-item__btn"><span>BUY</span></a>
+                    <a href="#" class="buy-row-item__btn btn">
+                        <span>buy</span>
+                    </a>
                 </section>
                 <section class="buy-row-item">
                     <span class="buy-row-item__title">Premium</span>
@@ -196,7 +190,9 @@
                         <li class="buy-row-item__list-item">Cum odio, iste quia doloribus autem;</li>
                         <li class="buy-row-item__list-item">Aperiam nulla ea neque.</li>
                     </ol>
-                    <a href="" class="buy-row-item__btn"><span>BUY</span></a>
+                    <a href="" class="buy-row-item__btn btn">
+                        <span>buy</span>
+                    </a>
                 </section>
                 <section class="buy-row-item">
                     <span class="buy-row-item__title">Lux</span>
@@ -214,7 +210,9 @@
                         <li class="buy-row-item__list-item">Cum odio, iste quia doloribus autem;</li>
                         <li class="buy-row-item__list-item">Aperiam nulla ea neque.</li>
                     </ol>
-                    <a href="" class="buy-row-item__btn"><span>BUY</span></a>
+                    <a href="" class="buy-row-item__btn btn">
+                        <span>buy</span>
+                    </a>
                 </section>
             </div>
         </section>
@@ -224,7 +222,7 @@
                 <input type="text" placeholder="Your name:" class="contacts-form__name input-text">
                 <input type="email" placeholder="Your email:" class="contacts-form__email input-text">
                 <textarea placeholder="Your email:" class="contacts-form__message input-text"></textarea>
-                <input type="text" value="SEND" class="contacts-form__submit">
+                <input type="text" value="send" class="contacts-form__submit btn">
             </form>
             <div class="contacts-list">
                 <ul class="contacts-list__items">
@@ -233,11 +231,11 @@
                     <li class="contacts-list__item"><a href="#" class="mail__link link link-white">psdhtmlcss@mail.ru</a></li>
                     <li class="contacts-list__item"><a href="#" class="phone__link link link-white">80 00 4568 55 55</a></li>
                 </ul>
-                <a href="#" class="contacts-link__link link"><img src="img/icons/twiter.png" alt="#" class="contacts-link__img"></a>
-                <a href="#" class="contacts-link__link link"><img src="img/icons/facebook.png" alt="#" class="contacts-link__img"></a>
-                <a href="#" class="contacts-link__link link"><img src="img/icons/in.png" alt="#" class="contacts-link__img"></a>
-                <a href="#" class="contacts-link__link link"><img src="img/icons/google.png" alt="#" class="contacts-link__img"></a>
-                <a href="#" class="contacts-link__link link"><img src="img/icons/youtube.png" alt="#" class="contacts-link__img"></a>
+                <a href="#" class="contacts-link__link twiter link"></a>
+                <a href="#" class="contacts-link__link facebook link"></a>
+                <a href="#" class="contacts-link__link in link"></a>
+                <a href="#" class="contacts-link__link google link"></a>
+                <a href="#" class="contacts-link__link youtube link"></a>
             </div>
         </footer>
     </main>
