--- a/project_1/index.html
+++ b/project_1/index.html
@@ -84,7 +84,7 @@
             <span class="screenshots__title title">Screenshots</span>
             <div class="screenshots-grid grid">
                 <figure class="screenshots-grid__item">
-                    <img class="screenshots-grid__img img" src="#" alt="" width="200" height="150">
+                    <img class="screenshots-grid__img img" src="#" alt="#" width="200" height="150">
                     <figcaption>
                         <span class="figcaption__title">The description for the image</span>
                         <p class="figcaption__text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque,
@@ -93,7 +93,7 @@
                     </figcaption>
                 </figure>
                 <figure class="screenshots-grid__item">
-                    <img class="screenshots-grid__img img" src="#" alt="" width="200" height="150">
+                    <img class="screenshots-grid__img img" src="#" alt="#" width="200" height="150">
                     <figcaption>
                         <span class="figcaption__title">The description for the image</span>
                         <p class="figcaption__text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque,
@@ -102,7 +102,7 @@
                     </figcaption>
                 </figure>
                 <figure class="screenshots-grid__item">
-                    <img class="screenshots-grid__img img" src="#" alt="" width="200" height="150">
+                    <img class="screenshots-grid__img img" src="#" alt="#" width="200" height="150">
                     <figcaption>
                         <span class="figcaption__title">The description for the image</span>
                         <p class="figcaption__text">Lorem ipsum dolor sit amet, consectetur adipisic&shy;ing elit. Nobis
@@ -111,7 +111,7 @@
                     </figcaption>
                 </figure>
                 <figure class="screenshots-grid__item">
-                    <img class="screenshots-grid__img img" src="#" alt="" width="200" height="150">
+                    <img class="screenshots-grid__img img" src="#" alt="#" width="200" height="150">
                     <figcaption>
                         <span class="figcaption__title">The description for the image</span>
                         <p class="figcaption__text">Lorem ipsum dolor sit amet, consectetur adipisic&shy;ing elit. Nobis
