Выполнена работа над ошибками

--- a/project_2/index.html
+++ b/project_2/index.html
@@ -303,7 +303,9 @@
                         </button>
                     </div>
                 </div>
-                <button type="button" class="project__btn"><span class="project__btn-text">Load More</span></button>
+                <button type="button" class="project__btn">
+                    <span class="project__btn-text">Load More</span>
+                </button>
             </div>
         </section>
         <section class="video">
@@ -337,6 +339,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
 </body>
