--- a/project_2/index.html
+++ b/project_2/index.html
@@ -366,7 +366,7 @@
         </section>
         <section class="mobile-devices">
             <div class="mobile-devices-container">
-                <span class="mobile-devices__title">Excellent for Mobile Devices.</span>
+                <span class="mobile-devices__title">Excellent for Mobile&nbsp;Devices.</span>
                 <p class="mobile-devices__txt">Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
                 <div class="mobile-devices-features">
                     <ul class="mobile-devices-features__list">
